update to latest version of asm (5.1)